--- a/json-server/package.json
+++ b/json-server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "json-server --watch db.json p 4000"
+    "dev": "json-server --watch db.json --port 8000"
   },
   "author": "",
   "license": "ISC",
